# primitive_actions

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
action/: CartesianPathFollow.action  Pick.action  Place.action
config/: fr3_ros_controllers.yaml
launch/: cartesian_path_action_server.launch.py  franka.launch.py  primitive_actions.launch.py
primitive_actions/: cartesian_path_action_server.py  franka_error_recovery.py  franka_move_to_start.py  primitive_action_planner.py  test_cartesian_circle.py  test_primitive_actions.py
urdf/: franka_fr3_kinematics.urdf
